// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexColumn renders default gap 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * {
  margin-top: 20px;
}

.c0 > *:first-child {
  margin-top: 0;
}

<div
  className="c0"
>
  <button
    type="submit"
  >
    SUBMIT
  </button>
  <button
    type="button"
  >
    CANCEL
  </button>
  <button
    type="button"
  >
    CLEAR
  </button>
</div>
`;

exports[`FlexGroup renders with custom gap 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * {
  margin-top: 10px;
}

.c0 > *:first-child {
  margin-top: 0;
}

<div
  className="c0"
>
  <button
    type="submit"
  >
    SUBMIT
  </button>
  <button
    type="button"
  >
    CANCEL
  </button>
  <button
    type="button"
  >
    CLEAR
  </button>
</div>
`;
